# patient-encounter-system

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: database.py  main.py
src/models/: models.py
src/schemas/: schemas.py
src/services/: clinic_service.py
tests/: test_main.py
